--- a/templates/admin/admin_pos-reg.html
+++ b/templates/admin/admin_pos-reg.html
@@ -31,6 +31,8 @@
         <input type="text" class="in" name="kip">
         <label for="cip" class="lab">Counter IP</label>
         <input type="text" class="in" name="cip">
+        <label for="mob" class="lab">Address</label>
+        <input type="text" class="in" name="add">
         <input type="submit" class="ins">  
     </form>
     <style>
