--- a/templates/pos/pos_checkout.html
+++ b/templates/pos/pos_checkout.html
@@ -27,27 +27,19 @@
                </div>
         </div>
       </div>
-      <div class="container px-4" style="margin:0;">
-        <div class="row gx-5" >
-          <div class="col" >
-           <div class="p-3 border bg-light">Product id{{p.cart_product}}</div>
-          </div>
-          <div class="col">
-            <div class="p-3 border bg-light"> Product quantity{{p.cart_quantity}}</div>
-          </div>
+      <div style="display:flex; flex-direction:row; justify-content: space-around; align-items: center;">
+        <div style="padding: 2%; width: 30%;"><strong>Product</strong></div>
+          <div style="padding: 2%;"><strong>Price</strong></div>
+            <div style="padding: 5%;"><strong>Quantity</strong></div>
+              <div style="padding: 5%;"><strong>Sum</strong></div>
         </div>
-      </div>
-    {% for p in pros %}
-          <div class="container px-4" style="margin:0;">
-            <div class="row gx-5" >
-              <div class="col" >
-               <div class="p-3 border bg-light">{{p.cart_product}}</div>
+    {% for c in poo %}
+          <div style="display:flex; flex-direction:row; justify-content: space-around; align-items: center;">
+              <div style="padding: 5%; width: 30%;">{{c.product}}</div>
+                <div style="padding: 5%;">{{c.price}}</div>
+                  <div style="padding: 5%;">{{c.quant}}</div>
+                    <div style="padding: 5%;" class="total">{{c.p_total}}</div>
               </div>
-              <div class="col">
-                <div class="p-3 border bg-light">{{p.cart_quantity}}</div>
-              </div>
-            </div>
-          </div>
           {% endfor %}
         
           <div class="container px-4" style="margin:0;">
@@ -58,11 +50,17 @@
             </div>
           </div>
         </div>
-        <div style="display: flex;flex-direction: column; margin-left: 15%;">
+        <div style="display: flex;flex-direction: column; margin-left: 15%; margin-top: 5%;">
+          <div class="input-group input-group-sm mb-3" >
+            <div class="input-group-prepend" >
+              <span class="input-group-text" id="inputGroup-sizing-sm" style="text-align: center;font-size: x-large; ">Total Expected</span>
+            </div>
+            <div  class="form-control" id="to" style="text-align: center;font-size: x-large; " ></div>
+          </div>
         <form action="" method="post">
             {% csrf_token %}
 
-            <div class="card border-warning mb-3" style="margin-top: 25%;">
+            <div class="card border-warning mb-3" style="margin-top: 1%;">
                 <div class="card-header">This feature comming sonn</div>
                 <div class="card-body">
                   <div class="form-check form-switch" style="margin-top: 5%;">
@@ -141,3 +139,14 @@ input::-webkit-outer-spin-button,
       
     }
 </style>
+<script>
+  let v = document.getElementsByClassName("total")
+  console.log(v)
+  t = 0
+  for(i=0;i<v.length;i++){
+    t = t+Number(v[i].innerHTML)
+  }
+  console.log(t)
+  let c = document.getElementById("to")
+  c.innerHTML = "<strong>"+t+"</strong>"
+  </script>
