--- a/templates/admin/admin_pos-reg.html
+++ b/templates/admin/admin_pos-reg.html
@@ -23,6 +23,11 @@
         <input type="text" class="in" name="mobile">
         <label for="mob" class="lab">Email</label>
         <input type="email" class="in" name="email">
+        <select name="u_t" id="">
+            <option value="">Select the subcription type</option>
+            <option value="1">Pro user</option>
+            <option value="0">Basic</option>
+        </select>
         <label for="usr" class="lab">Prefered Username</label>
         <input type="text" class="in" name="username">
         <label for="pass" class="lab">Prefered Password</label>
@@ -31,6 +36,8 @@
         <input type="text" class="in" name="kip">
         <label for="cip" class="lab">Counter IP</label>
         <input type="text" class="in" name="cip">
+        <label for="upi" class="lab">UPI Id</label>
+        <input type="text" class="in" name="upi">
         <label for="mob" class="lab">Address</label>
         <input type="text" class="in" name="add">
         <input type="submit" class="ins">  
