--- a/templates/pos/fast_pos_billing.html
+++ b/templates/pos/fast_pos_billing.html
@@ -20,7 +20,11 @@
     alertify.success('{{msg}}');
      {% endfor %}
   </script>
-  
+  <div style="display: flex; flex-direction: row; justify-content: space-around; font-size: x-large; font-weight: bold; margin: 0; margin-top: -1%;">      
+    <div style="margin-left: -10%;">Categories</div>
+  <div style="margin-left: -5%;">Products</div>
+  <div>Cart</div>
+</div>
     <div class="main">
         <div class="cate">
             <div class="c">
