--- a/static/main.css
+++ b/static/main.css
@@ -15,7 +15,7 @@
     font-weight: bolder;
 }
 .navbar{
-    width: 80%;
+    
     display: flex;
     flex-direction: row;
     margin-right: 10%;
@@ -27,3 +27,10 @@
     padding: 1%;
     font-size: x-large;
 }
+@media only screen and (min-width: 600px) {
+    .topbar{
+      
+        background-color: rgb(0, 0, 0); 
+        
+    }
+  }
