--- a/templates/pos/fast_pos_checkout.html
+++ b/templates/pos/fast_pos_checkout.html
@@ -38,6 +38,7 @@
               <div style="padding: 5%; width: 30%;">{{c.sale_product_name}}</div>
                 <div style="padding: 5%;" >{{c.sale_price}}</div>
                   <div style="padding: 5%;">{{c.sale_quantity}}</div>
+                  <div style="padding: 5%;">{% widthratio c.sale_price 1 c.sale_quantity %}</div>
               </div>
           {% endfor %}
         
@@ -54,7 +55,7 @@
             <div class="input-group-prepend" >
               <span class="input-group-text" id="inputGroup-sizing-sm" style="text-align: center;font-size: x-large; ">Total Expected</span>
             </div>
-            <div  class="form-control" id="to" style="text-align: center;font-size: x-large; " >{{total}}</div>
+            <div  class="form-control" id="to" style="text-align: center;font-size: x-large; " ><strong>{{total}}</strong></div>
           </div>
           {% if worker %}
           <div class="input-group-prepend" >
