--- a/templates/pos/pos_billing.html
+++ b/templates/pos/pos_billing.html
@@ -20,7 +20,7 @@
     alertify.success('{{msg}}');
      {% endfor %}
   </script>
-  <div style="display: flex; flex-direction: row; justify-content: space-around; font-size: x-large; font-weight: bold; margin: 0; margin-top: -1%;">      
+  <div style="display: flex; flex-direction: row; justify-content: space-around; font-size: 28px; font-weight: 600; margin: 0; margin-top: -1.2%; ">      
     <div style="margin-left: -10%;">Categories</div>
   <div style="margin-left: -5%;">Products</div>
   <div>Cart</div>
@@ -107,7 +107,7 @@
     .main{
         display: flex;
         flex-direction: row; 
-        height: 600px;
+        height: 597px;
        
         
     }
