--- a/static/main.css
+++ b/static/main.css
@@ -15,7 +15,7 @@
     font-weight: bolder;
 }
 .navbar{
-    
+    width: 100%;
     display: flex;
     flex-direction: row;
     margin-right: 10%;
@@ -27,10 +27,4 @@
     padding: 1%;
     font-size: x-large;
 }
-@media only screen and (min-width: 600px) {
-    .topbar{
-      
-        background-color: rgb(0, 0, 0); 
-        
-    }
-  }
+
