--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -12,6 +12,7 @@
 
     {% endfor %}
     <a href="{% url 'admin_reg' %}" class="ins">New Pos User Register</a>
+    <a href="{% url 'admin_sel_u' %}" class="ins">Pos User Edit</a>
     <a href="{% url 'admin_logout' %}" class="ins-r">Logout</a>
     <style>
             body{
