--- a/templates/admin/admin_pos-reg.html
+++ b/templates/admin/admin_pos-reg.html
@@ -23,7 +23,7 @@
         <input type="text" class="in" name="mobile">
         <label for="mob" class="lab">Email</label>
         <input type="email" class="in" name="email">
-        <select name="u_t" id="">
+        <select name="u_t" id="" required>
             <option value="">Select the subcription type</option>
             <option value="1">Pro user</option>
             <option value="0">Basic</option>
